--- a/src/main/webapp/WEB-INF/views/cathedra/index.html
+++ b/src/main/webapp/WEB-INF/views/cathedra/index.html
@@ -9,11 +9,11 @@
 <body>
 <h1 class="navbar-brand" style="text-align: center">Cathedras menu</h1>
 <div class="container-fluid">
-    <a class="nav-link active" th:href="@{/all/cathedras}">Show all cathedras</a>
+    <a class="nav-link active" th:href="@{/cathedras/all}">Show all cathedras</a>
     <br/>
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-            <form class="d-flex" th:method="POST" action="/show/cathedra">
+            <form class="d-flex" th:method="POST" action="/cathedras/cathedra">
                 <input class="form-control me-2" type="number" placeholder="Cathedra id" aria-label="Cathedra id"
                        name="id"/>
                 <button class="btn btn-outline-success" type="submit">Search</button>
