--- a/src/main/webapp/WEB-INF/views/schedules/index.html
+++ b/src/main/webapp/WEB-INF/views/schedules/index.html
@@ -9,13 +9,13 @@
 <body>
 <h1 class="navbar-brand" style="text-align: center">Schedules menu</h1>
 <div class="container-fluid">
-    <a class="nav-link active" th:href="@{/all/schedules}">Show all schedules</a>
+    <a class="nav-link active" th:href="@{/schedules/all}">Show all schedules</a>
     <br/>
 </div>
 <p>Find Schedule by id</p>
 <nav class="navbar navbar-light bg-light" aria-label>
     <div class="container-fluid">
-        <form class="d-flex" th:method="POST" action="/show/schedule">
+        <form class="d-flex" th:method="POST" action="/schedules/schedule">
             <input class="form-control me-2" type="number" placeholder="Schedule id" aria-label="Schedule id"
                    name="id"/>
             <button class="btn btn-outline-success" type="submit">Search</button>
