--- a/src/main/webapp/WEB-INF/views/students/index.html
+++ b/src/main/webapp/WEB-INF/views/students/index.html
@@ -9,13 +9,13 @@
 <body>
 <h1 class="navbar-brand" style="text-align: center">Student menu</h1>
 <div class="container-fluid">
-    <a class="nav-link active" th:href="@{/all/students}">Show all students</a>
+    <a class="nav-link active" th:href="@{/students/all}">Show all students</a>
     <br/>
 </div>
 <p>Find student by id</p>
 <nav class="navbar navbar-light bg-light" aria-label>
     <div class="container-fluid">
-        <form class="d-flex" th:method="POST" action="/show/student">
+        <form class="d-flex" th:method="POST" action="/students/student">
             <input class="form-control me-2" type="number" placeholder="Student id" aria-label="Student id"
                    name="id"/>
             <button class="btn btn-outline-success" type="submit">Search</button>
