Full CRUD pages created

--- a/src/main/webapp/WEB-INF/views/cathedra/index.html
+++ b/src/main/webapp/WEB-INF/views/cathedra/index.html
@@ -21,5 +21,22 @@
         </div>
     </nav>
 </div>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="POST"  th:action="@{/cathedras/add}" th:object="${cathedra}">
+            <input class="form-control me-2" type="text" th:field="*{name}" placeholder="Cathedra name" aria-label="Cathedra name" name="name"/>
+            <input class="form-control me-2" type="text" th:field="*{facultyId}" placeholder="Faculty id" aria-label="Faculty id" name="id"/>
+            <button class="btn btn-outline-success btn-sm" type="submit">Add new cathedra</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="delete"  th:action="@{/cathedras/delete}">
+            <input class="form-control me-2" type="number" placeholder="Cathedra id" aria-label="Cathedra id" name="id"/>
+            <button class="btn btn-outline-success" type="submit">Delete cathedra</button>
+        </form>
+    </div>
+</nav>
 </body>
 </html>
