--- a/src/main/webapp/WEB-INF/views/items/show.html
+++ b/src/main/webapp/WEB-INF/views/items/show.html
@@ -16,8 +16,20 @@
                 <th><p th:text="${item.getId()}">VALUE</p></th>
             </tr>
             <tr>
-                <th>Date</th>
-                <th><p th:text="${item.getDate()}">VALUE</p></th>
+                <th>Day</th>
+                <th><p th:text="${item.getDay()}">VALUE</p></th>
+            </tr>
+            <tr>
+                <th>Hour</th>
+                <th><p th:text="${item.getHour()}">VALUE</p></th>
+            </tr>
+            <tr>
+                <th>Audience id</th>
+                <th><p th:text="${item.getAudienceId()}">VALUE</p></th>
+            </tr>
+            <tr>
+                <th>Schedule id</th>
+                <th><p th:text="${item.getScheduleId()}">VALUE</p></th>
             </tr>
             <tr>
                 <th>duration</th>
