--- a/src/main/webapp/WEB-INF/views/university.html
+++ b/src/main/webapp/WEB-INF/views/university.html
@@ -16,23 +16,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" th:href="@{faculties/index}">Faculties</a>
+                <a class="nav-link active" th:href="@{faculties}">Faculties</a>
                 <br/>
-                <a class="nav-link active" th:href="@{audiences/index}">Audiences</a>
+                <a class="nav-link active" th:href="@{audiences}">Audiences</a>
                 <br/>
-                <a class="nav-link active" th:href="@{cathedras/index}">Cathedras</a>
+                <a class="nav-link active" th:href="@{cathedras}">Cathedras</a>
                 <br/>
-                <a class="nav-link active" th:href="@{schedules/index}">Schedules</a>
+                <a class="nav-link active" th:href="@{schedules}">Schedules</a>
                 <br/>
-                <a class="nav-link active" th:href="@{teachers/index}">Teachers</a>
+                <a class="nav-link active" th:href="@{teachers}">Teachers</a>
                 <br/>
-                <a class="nav-link active" th:href="@{subjects/index}">Subjects</a>
+                <a class="nav-link active" th:href="@{subjects}">Subjects</a>
                 <br/>
-                <a class="nav-link active" th:href="@{items/index}">Items</a>
+                <a class="nav-link active" th:href="@{items}">Items</a>
                 <br/>
-                <a class="nav-link active" th:href="@{groups/index}">Groups</a>
+                <a class="nav-link active" th:href="@{groups}">Groups</a>
                 <br/>
-                <a class="nav-link active" th:href="@{students/index}">Students</a>
+                <a class="nav-link active" th:href="@{students}">Students</a>
             </div>
         </div>
     </div>
