--- a/src/main/webapp/WEB-INF/views/audiences/index.html
+++ b/src/main/webapp/WEB-INF/views/audiences/index.html
@@ -20,5 +20,23 @@
         </form>
     </div>
 </nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="POST" th:action="@{/audiences/add}" th:object="${audience}">
+            <input class="form-control me-2" type="number" th:field="*{number}" placeholder="Audience number"
+                   aria-label="Audience number" name="namber"/>
+            <button class="btn btn-outline-success" type="submit">Add new audience</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="delete" th:action="@{/audiences/delete}">
+            <input class="form-control me-2" type="number" placeholder="Audience id" aria-label="Audience id"
+                   name="id"/>
+            <button class="btn btn-outline-success" type="submit">Delete audience</button>
+        </form>
+    </div>
+</nav>
 </body>
 </html>
