--- a/src/main/webapp/WEB-INF/views/groups/index.html
+++ b/src/main/webapp/WEB-INF/views/groups/index.html
@@ -32,5 +32,26 @@
         </form>
     </div>
 </nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="POST" th:action="@{/groups/add}" th:object="${group}">
+            <input class="form-control me-2" type="text" th:field="*{name}" placeholder="Name" aria-label="Name"
+                   name="name"/>
+            <input class="form-control me-2" type="number" th:field="*{scheduleId}" placeholder="Schedule id"
+                   aria-label="Schedule id" name="scheduleId"/>
+            <input class="form-control me-2" type="number" th:field="*{cathedraId}" placeholder="Cathedrs id"
+                   aria-label="Cathedra id" name="cathedraId"/>
+            <button class="btn btn-outline-success" type="submit">Add new group</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="delete" th:action="@{/groups/delete}">
+            <input class="form-control me-2" type="number" placeholder="Group id" aria-label="Group id" name="id"/>
+            <button class="btn btn-outline-success" type="submit">Delete group</button>
+        </form>
+    </div>
+</nav>
 </body>
 </html>
