--- a/src/main/webapp/WEB-INF/views/students/index.html
+++ b/src/main/webapp/WEB-INF/views/students/index.html
@@ -22,5 +22,78 @@
         </form>
     </div>
 </nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="POST"  th:action="@{/students/add}" th:object="${student}">
+            <input class="form-control me-2" type="text" th:field="*{firstName}" placeholder="First name" aria-label="First name" name="firstName"/>
+            <input class="form-control me-2" type="text" th:field="*{lastName}" placeholder="Last name" aria-label="Last name" name="LastName"/>
+            <input class="form-control me-2" type="text" th:field="*{sex}" placeholder="Sex" aria-label="" name="sex"/>
+            <input class="form-control me-2" type="number" th:field="*{age}" placeholder="Age" aria-label="Age" name="age"/>
+            <input class="form-control me-2" type="number" th:field="*{course}" placeholder="Course" aria-label="Course" name="course"/>
+            <input class="form-control me-2" type="number" th:field="*{groupId}" placeholder="Group Id" aria-label="Group id" name="groupId"/>
+            <button class="btn btn-outline-success" type="submit">Add new student</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="delete"  th:action="@{/students/delete}">
+            <input class="form-control me-2" type="number" placeholder="Student id" aria-label="Student id" name="id"/>
+            <button class="btn btn-outline-success" type="submit">Delete student</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="post"  th:action="@{/students/assign/group}">
+            <input class="form-control me-2" type="number" placeholder="Student id" aria-label="Student id" name="studentId"/>
+            <input class="form-control me-2" type="number" placeholder="Group id" aria-label="Group id" name="groupId"/>
+            <button class="btn btn-outline-success" type="submit">Assign group</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="post"  th:action="@{/students/remove/group}">
+            <input class="form-control me-2" type="number" placeholder="Student id" aria-label="Student id" name="studentId"/>
+            <button class="btn btn-outline-success" type="submit">Remove student from group</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="post"  th:action="@{/students/change/group}">
+            <input class="form-control me-2" type="number" placeholder="Student id" aria-label="Student id" name="studentId"/>
+            <input class="form-control me-2" type="number" placeholder="Group id" aria-label="Group id" name="groupId"/>
+            <button class="btn btn-outline-success" type="submit">Change group</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="post"  th:action="@{/students/assign/course}">
+            <input class="form-control me-2" type="number" placeholder="Student id" aria-label="Student id" name="studentId"/>
+            <input class="form-control me-2" type="number" placeholder="Course" aria-label="Course" name="course"/>
+            <button class="btn btn-outline-success" type="submit">Assign course</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="post"  th:action="@{/students/remove/course}">
+            <input class="form-control me-2" type="number" placeholder="Student id" aria-label="Student id" name="studentId"/>
+            <button class="btn btn-outline-success" type="submit">Remove course</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="post"  th:action="@{/students/change/course}">
+            <input class="form-control me-2" type="number" placeholder="Student id" aria-label="Student id" name="studentId"/>
+            <input class="form-control me-2" type="number" placeholder="Course" aria-label="Course" name="course"/>
+            <button class="btn btn-outline-success" type="submit">Change course</button>
+        </form>
+    </div>
+</nav>
 </body>
 </html>
