--- a/src/main/webapp/WEB-INF/views/subjects/index.html
+++ b/src/main/webapp/WEB-INF/views/subjects/index.html
@@ -32,5 +32,49 @@
         </form>
     </div>
 </nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="POST"  th:action="@{/subjects/add}" th:object="${subject}">
+            <input class="form-control me-2" type="text" th:field="*{name}" placeholder="Name" aria-label="Name" name="name"/>
+            <input class="form-control me-2" type="number" th:field="*{teacherId}" placeholder="Teacher id" aria-label="Teacher id" name="teacherId"/>
+            <input class="form-control me-2" type="text" th:field="*{description}" placeholder="Subject description" aria-label="Subject description" name="description"/>
+            <button class="btn btn-outline-success" type="submit">Add new subject</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="delete"  th:action="@{/subjects/delete}">
+            <input class="form-control me-2" type="number" placeholder="Subject id" aria-label="Iubject id" name="id"/>
+            <button class="btn btn-outline-success" type="submit">Delete subject</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="delete"  th:action="@{/subjects/remove/teacher}">
+            <input class="form-control me-2" type="number" placeholder="Subject id" aria-label="Subject id" name="subjectId"/>
+            <button class="btn btn-outline-success" type="submit">Remove teacher</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="POST"  th:action="@{/subjects/assign/teacher}">
+            <input class="form-control me-2" type="number" placeholder="Subject id" aria-label="Subject id" name="subjectId"/>
+            <input class="form-control me-2" type="number" placeholder="Teacher id" aria-label="Teacher id" name="teacherId"/>
+            <button class="btn btn-outline-success" type="submit">Assign Teacher</button>
+        </form>
+    </div>
+</nav>
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+        <form class="d-flex" th:method="POST"  th:action="@{/subjects/change/teacher}">
+            <input class="form-control me-2" type="number" placeholder="Subject id" aria-label="Subject id" name="subjectId"/>
+            <input class="form-control me-2" type="number" placeholder="Teacher id" aria-label="Teacher id" name="teacherId"/>
+            <button class="btn btn-outline-success" type="submit">Change teacher</button>
+        </form>
+    </div>
+</nav>
 </body>
 </html>
