Corrected after comments

--- a/src/main/webapp/WEB-INF/views/faculties/index.html
+++ b/src/main/webapp/WEB-INF/views/faculties/index.html
@@ -9,6 +9,7 @@ xmlns:th=xmlns:th="http://www.w3.org/1999/xhtml">
 </head>
 <body>
 <h1 class="navbar-brand" style="text-align: center">Faculties menu</h1>
+<h2 class="navbar-brand" style="text-align: center" th:text="${message}">MESSAGE</h2>
 <div class="container-fluid">
     <a class="nav-link active" th:href="@{/faculties/all}">Show all faculties</a>
 </div>
