--- a/src/main/webapp/WEB-INF/views/subjects/index.html
+++ b/src/main/webapp/WEB-INF/views/subjects/index.html
@@ -9,6 +9,7 @@
 <body>
 <div class="container-fluid">
     <h1 class="navbar-brand" style="text-align: center">Subject menu</h1>
+    <h2 class="navbar-brand" style="text-align: center" th:text="${message}">MESSAGE</h2>
     <a class="nav-link active" th:href="@{/subjects/all}">Show all subjects</a>
     <br/>
 </div>
