--- a/src/main/webapp/WEB-INF/views/audiences/index.html
+++ b/src/main/webapp/WEB-INF/views/audiences/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1 class="navbar-brand" style="text-align: center">Audience menu</h1>
+<h2 class="navbar-brand" style="text-align: center" th:text="${message}">MESSAGE</h2>
 <div class="container-fluid">
     <a class="nav-link active" th:href="@{/audiences/all}">Show all audiences</a>
 </div>
