--- a/src/main/webapp/WEB-INF/views/schedules/index.html
+++ b/src/main/webapp/WEB-INF/views/schedules/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1 class="navbar-brand" style="text-align: center">Schedules menu</h1>
+<h2 class="navbar-brand" style="text-align: center" th:text="${message}">MESSAGE</h2>
 <div class="container-fluid">
     <a class="nav-link active" th:href="@{/schedules/all}">Show all schedules</a>
     <br/>
