--- a/src/main/webapp/WEB-INF/views/cathedra/show.html
+++ b/src/main/webapp/WEB-INF/views/cathedra/show.html
@@ -22,7 +22,7 @@
             </tr>
             <tr>
                 <th>faculty id</th>
-                <th><p th:text="${cathedra.getFacultyId()}">VALUE</p>
+                <th><p th:text="${cathedra.getFaculty().getId}">VALUE</p>
                 </th>
             </tr>
         </table>
