--- a/src/main/webapp/WEB-INF/views/groups/show.html
+++ b/src/main/webapp/WEB-INF/views/groups/show.html
@@ -21,11 +21,11 @@
             </tr>
             <tr>
                 <th>cathedra id</th>
-                <th><p th:text="${group.getCathedraId()}"></p></th>
+                <th><p th:text="${group.getCathedra().getId()}"></p></th>
             </tr>
             <tr>
                 <th>schedule id</th>
-                <th><p th:text="${group.getScheduleId()}"></p></th>
+                <th><p th:text="${group.getSchedule().getId()}"></p></th>
             </tr>
         </table>
     </div>
