--- a/src/main/webapp/WEB-INF/views/students/show.html
+++ b/src/main/webapp/WEB-INF/views/students/show.html
@@ -33,7 +33,7 @@
             </tr>
             <tr>
                 <th>group id</th>
-                <th><p th:text="${student.getGroupId()}">value</p></th>
+                <th><p th:text="${student.getGroup().getId()}">value</p></th>
             </tr>
             <tr>
                 <th>course</th>
