--- a/src/main/webapp/WEB-INF/views/subjects/related.html
+++ b/src/main/webapp/WEB-INF/views/subjects/related.html
@@ -23,7 +23,7 @@
                 <tr>
                     <th><p th:text="${subject.getId()}">VALUE</p></th>
                     <th><p th:text="${subject.getName()}">VALUE</p></th>
-                    <th><p th:text="${subject.getTeacherId()}">VALUE</p></th>
+                    <th><p th:text="${subject.getTeacher().getId()}">VALUE</p></th>
                     <th><p th:text="${subject.getDescription()}">VALUE</p></th>
                 </tr>
             </div>
