--- a/src/main/webapp/WEB-INF/views/subjects/show.html
+++ b/src/main/webapp/WEB-INF/views/subjects/show.html
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>teacher id</th>
-                <th><p th:text="${subject.getTeacherId}"></p></th>
+                <th><p th:text="${subject.getTeacher.getId()}"></p></th>
             </tr>
             <tr>
                 <th>description</th>
