--- a/src/main/webapp/WEB-INF/views/teacher/index.html
+++ b/src/main/webapp/WEB-INF/views/teacher/index.html
@@ -45,7 +45,7 @@
                    name="age"/>
             <input class="form-control me-2" type="text" th:field="*{degree}" placeholder="Degree" aria-label="Degree"
                    name="degree"/>
-            <input class="form-control me-2" type="text" th:field="*{scheduleId}" placeholder="Schedule Id"
+            <input class="form-control me-2" type="text" placeholder="Schedule Id"
                    aria-label="Sxhedule id" name="scheduleId"/>
             <button class="btn btn-outline-success" type="submit">Add new teacher</button>
         </form>
