--- a/src/main/webapp/WEB-INF/views/teacher/show.html
+++ b/src/main/webapp/WEB-INF/views/teacher/show.html
@@ -37,7 +37,7 @@
             </tr>
             <tr>
                 <th>schedule id</th>
-                <th><p th:text="${teacher.getScheduleId()}">value</p></th>
+                <th><p th:text="${teacher.getSchedule().getId()}">value</p></th>
             </tr>
         </table>
     </div>
